--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,83 @@
 html{
     font-size: 62.5%;
 }
+
 body{
     font-size: 1.6rem;
+    font-family: "Poppins", serif;
 }
+/* ========================common================================= */
+a{
+    text-decoration: none;
+}
+
+.main-content{
+    width: 1170px;
+    max-width: calc(100% - 48px);
+    margin-left: auto;
+    margin-right: auto;
+}
+.btn{
+    display: inline-block;
+    min-width: 118px;
+    padding: 0px 16px;
+    line-height: 50px;
+    text-align: center;
+    color: #FFF;
+    font-size: 16px;
+    font-weight: 600;
+    border-radius: 24.5px;
+    background: #171100;
+
+}
+/* ================header======================== */
+.header{
+    background: #FFFCF4;
+}
+.header.fixed{
+    position: sticky;
+    top: -28px;
+}
+.header .body{
+    display: flex;
+    align-items: center;
+    padding: 36px 0 8px;
+
+}
+
+.nav{
+    margin-left: auto;
+}
+
+.nav ul{
+    display: flex;
+}
+
+.nav a{
+color: #5F5B53;
+font-size: 16px;
+padding: 8px 20px;
+}
+/* dua chuot vao */
+.nav a:hover{
+color: #171100;
+/* font-weight: 600; */
+text-shadow: 1px 0 0 currentColor;
+}
+.nav li.active a::after{
+    position: absolute;
+    left: 760px;
+    display: block;
+    content: "";
+    width: 12px;
+    height: 2px;
+    border-radius: 1px;
+    background: #171100;
+
+}
+.header .btn-sign-up{
+    min-width: 144px;
+}
+.header .action{
+    margin-left: 49px;
+}   
