--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,10 @@ body{
     font-size: 1.6rem;
     font-family: "Poppins", serif;
 }
+:root{
+    --font-heading: "Sen", sans-serif;
+
+}
 /* ========================common================================= */
 a{
     text-decoration: none;
@@ -38,6 +42,7 @@ a{
     background: #FFFCF4;
 }
 .header.fixed{
+    z-index: 1;
     position: sticky;
     top: -28px;
 }
@@ -84,3 +89,132 @@ text-shadow: 1px 0 0 currentColor;
 .header .action{
     margin-left: 49px;
 }   
+ /* ==============================hero=================================== */
+ .hero{
+    padding:56px;
+    background: #FFFCF4;
+ }
+
+ .hero .body{
+    display: flex;
+ }
+ /* ============hero left============= */
+ .hero .media-block{
+    position: relative;
+    width: 48%;
+ }
+ .hero .content-block{
+    width: 52%;
+ }
+ .hero .media-block .img{
+    width: 470px;
+    height: 685px;
+    object-fit: cover;
+    border-radius: 20px;
+ }
+ .hero .hero-summary{
+    padding: 24px;
+    position: absolute;
+    bottom: 48px;
+    left: 300px;
+    /* top: 393px; */
+    /* right: 0px; */
+    border-radius: 12px;
+    background: #FFF;
+    box-shadow: 0px 16px 32px 0px rgba(0, 0, 0, 0.05);
+ }
+ .hero-summary .item{
+    display: flex;
+ }
+ .hero-summary .icon{
+    width: 48px;
+    height: 48px;
+    border-radius: 50%;
+    justify-content: center;
+    align-items: center;
+ }
+ .hero-summary .info{
+    margin-left: 16px;
+ }
+ .hero-summary .lable{
+    color: #5F5B53;
+    font-size: 1.4rem;
+    line-height: 1.86; /* 185.714% */
+ }
+ .hero-summary .title{
+    color: #171100;
+    font-size: 1.8rem;
+    font-weight: 600;
+    line-height: 1.67; /* 166.667% */
+ }
+ /* h================hero right===================== */
+ .hero .content-block{
+    width: 52%;
+    padding-left: 130px;
+    padding-top: 64px;
+ }
+ .hero .heading{
+    color: #171100;
+    font-family: var(--font-heading);
+    font-size: 5.8rem;
+    font-weight: 700;
+    line-height: 1.17; /* 117.241% */
+    letter-spacing: -1.16px;
+ }
+ .hero .desc{
+    margin-top: 22px;
+    color: #5F5B53;
+    font-size: 1.8rem;
+    line-height: 1.67; /* 166.667% */
+}
+.hero .cta-group{
+    display: flex;
+    align-items: center;
+    margin-top: 38px;
+}
+ .hero-cta{
+    margin-right: 28px;
+    min-width: 180px;
+    line-height: 64px;
+    border-radius: 32px;
+    background: #FFB900;
+}
+.hero .watch-video{
+    
+    border: none;
+    background: transparent;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+}
+.hero .watch-video .icon{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
+    border-radius: 40px;
+    background: #FFF;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.07);
+}
+.hero .watch-video span{
+    margin-left: 5px;
+    color: #171100;
+    font-size: 1.8rem;
+    font-weight: 600;
+    line-height: 1.67; /* 166.667% */
+}
+.hero .desc-recent{
+    margin-top: 48px;
+}
+.hero .desc-stats strong{
+    margin-right: 15px;
+    color: #171100;
+    font-family: var(--font-heading);
+    font-size: 4.4rem;
+    font-weight: 700;
+    line-height: 1.22; /* 122.727% */
+}
+.hero .desc-stats strong:nth-child(2){
+    margin-left: 28px;
+} 
