--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,10 @@ a{
     margin-left: auto;
     margin-right: auto;
 }
+.btn:hover{
+    cursor: pointer;
+    opacity: 0.9;
+}
 .btn{
     display: inline-block;
     min-width: 118px;
@@ -35,6 +39,21 @@ a{
     font-weight: 600;
     border-radius: 24.5px;
     background: #171100;
+
+}
+.heading-lv2{
+    color: #171100;
+    font-family: var(--font-heading);
+    font-size: 3.8rem;
+    font-weight: 700;
+    line-height: 1.26; /* 126.316% */
+    letter-spacing: -0.76px;
+}
+.line-clamp{
+    display: -webkit-box;
+    -webkit-line-clamp: var(--line-clamp,1);
+    -webkit-box-orient: vertical;
+    overflow: hidden;
 
 }
 /* ================header======================== */
@@ -218,3 +237,110 @@ text-shadow: 1px 0 0 currentColor;
 .hero .desc-stats strong:nth-child(2){
     margin-left: 28px;
 } 
+/* ========================popular=================== */
+.popular{
+    padding: 65px 0;
+    margin-top: 135px;
+}
+.popular-top .desc{
+    margin-top: 16px;
+    width: 458px;
+    color: #5F5B53;
+    font-size: 1.8rem;
+    font-weight: 400;
+    line-height: 1.67; /* 166.667% */
+}
+.popular-top{
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+}
+.popular-top .control{
+    gap: 18px;
+}
+
+.popular-top .control-btn{
+    background: transparent;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    color: #FFB900;
+    border: 1px solid #FFB900;
+
+    
+}
+
+.popular .course-list{
+    gap: 30px;
+    display: flex;
+    margin-top: 50px;
+}
+
+.popular .course-item .thumb{
+    width: 370px;
+    height: 278px;
+    border-radius: 12px 12px 0px 0px;
+    object-fit: cover;
+}
+.popular .course-item{
+    border-radius: 12px;
+    border: 1px solid #E2DFDA;
+    background: #FFF;
+}
+.popular .course-item:hover{
+    border-radius: 12px;
+    background: #ebe6e6;
+    box-shadow: 0px 18px 36px 0px rgba(0, 0, 0, 0.05);
+}
+.popular .course-item .info{
+    padding: 16px 22px 22px;
+}
+
+.popular .course-item .foot,
+.popular .course-item .rating,
+.popular .course-item .info .head{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+}
+.popular .rating .value{
+    margin-left: 6px;
+    color: #FEA31B;
+    font-size: 1.6rem;
+    font-weight: 400;
+    line-height: 1.75; /* 175% */
+}
+.popular .head .title{
+    color: #171100;
+    font-size: 1.8rem;
+    font-weight: 600;
+    line-height: 1.67; /* 166.667% */
+}
+.popular .course-item .desc{
+    width: 326px;
+    color: #5F5B53;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.86; /* 185.714% */
+}
+
+.popular .course-item footer{
+    margin-top: 12px;
+}
+.popular .course-item .price{
+    color: #171100;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 30px; /* 166.667% */
+}
+.popular .course-item .btn-book-now{
+    border: none;
+}
+.popular .course-item .btn-book-now:hover{
+    background: #FEA31B;
+
+}
