--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -344,3 +344,127 @@ text-shadow: 1px 0 0 currentColor;
     background: #FEA31B;
 
 }
+
+/* ===============================feedback================================ */
+.feedback{
+    margin-top: 135px;
+    padding: 96px 0;
+    background: #2E2100;
+}
+.feedback-item{
+    display: flex;
+}
+.feedback-item .avatar{
+    width: 72px;
+    height: 72px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+.feedback-item .info .member-name{
+    margin-top: 18px;
+    color: #F7F7F7;
+font-family: var(--font-heading);
+font-size: 2.4rem;
+font-weight: 700;
+line-height: 1.42; /* 141.667% */
+}
+.feedback-item .info .desc{
+    color: #BFBCB2;
+font-size: 1.4rem;
+font-weight: 400;
+line-height: 1.86; /* 185.714% */
+}
+.feedback-item .dots{
+    display: flex;
+}
+.feedback-item .content{
+    width: 60%;
+    margin-left: auto;
+}
+/* ========================================features==================== */
+.features{
+    margin-top: 135px;
+    padding: 65px 0;
+    /* background: blue; */
+}
+.features .body{
+    display: flex;
+    justify-content: space-between;
+}
+.features .body .images{
+    display: flex;
+    gap: 30px;
+}
+.features .images img{
+    width: 270px;
+height: 405px;
+object-fit: cover;
+}
+.features .lower{
+    margin-top: 34px;
+}
+.features .content{
+    width: 41%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.features .desc{
+    margin-top: 16px;
+    color: #5F5B53;
+font-size: 1.6rem;
+line-height: 1.75; /* 175% */
+}
+.features .cta-btn{
+    margin-top: 32px;
+    border-radius: 26px;
+background: #FFB900;
+}
+/* ======================bolog =========================*/
+.blogs{
+    margin-top: 135px;
+    padding: 96px 0;
+    background: #FFFCF4;
+}
+.blogs .blog-top{
+    text-align: center;
+}
+.blogs .desc{
+    margin: 0 auto;
+    width: 448px;
+    color: #696262;
+font-size: 16px;
+line-height: 28px; /* 175% */
+}
+.blogs .blog-list{
+    margin-top: 55px;
+    display: flex;
+    gap: 30px;
+}
+.blogs .date{
+    color: #5F5B53;
+font-size: 1.4;
+line-height: 1.86; /* 185.714% */
+margin-left: 20px;
+}
+.blogs .title{
+    margin-left: 20px;
+    width: 330px;
+    color: #171100;
+font-family: Poppins;
+font-size: 16px;
+font-style: normal;
+font-weight: 600;
+line-height: 28px; /* 175% */
+}
+.blogs .btn-read-more{
+    width: 118px;
+height: 50px;
+flex-shrink: 0;
+border-radius: 25px;
+background: #171100;
+}
+.blogs .btn-read-more:hover{
+
+background: #FFB900;
+}
